--- a/csgdsr/dsr/templates/dsr/admin/admin_page.html
+++ b/csgdsr/dsr/templates/dsr/admin/admin_page.html
@@ -23,12 +23,12 @@
 </head>
 <body>
 
-{% include 'dsr/user/user_sidebar.html' %}
+{% include 'dsr/admin/admin_sidebar.html' %}
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 
   <div style="margin-left: 250px; padding: 15px; overflow-y: auto;">
-    {% block usercontent %} 
+    {% block admincontent %} 
     
     {% endblock %}
     <!-- Dynamic content from views will be injected here -->
