--- a/csgdsr/dsr/templates/dsr/admin/other_agencies.html
+++ b/csgdsr/dsr/templates/dsr/admin/other_agencies.html
@@ -63,7 +63,7 @@
 
   <hr class="my-4">
 
-  <!-- Attack on TN Fishermen Form -->
+  {% comment %} <!-- Attack on TN Fishermen Form -->
   <div class="card mb-4">
     <div class="card-header bg-primary text-white">
       {% if edit_attacker %} Edit Attacker {% else %} Add Attacker {% endif %}
@@ -79,7 +79,6 @@
       </form>
     </div>
   </div>
-
   <h5>Attackers</h5>
   <div style="max-height: 260px; overflow-y: auto;">
     <table class="table table-bordered table-striped">
@@ -105,9 +104,7 @@
       </tbody>
     </table>
   </div>
-
   <hr class="my-4">
-
   <!-- Arrest of TN Fishermen Form -->
   <div class="card mb-4">
     <div class="card-header bg-primary text-white">
@@ -124,7 +121,6 @@
       </form>
     </div>
   </div>
-
   <h5>Arresting Authorities (TN)</h5>
   <div style="max-height: 260px; overflow-y: auto;">
     <table class="table table-bordered table-striped">
@@ -150,9 +146,7 @@
       </tbody>
     </table>
   </div>
-
   <hr class="my-4">
-
   <!-- Arrest of SL Fishermen Form -->
   <div class="card mb-4">
     <div class="card-header bg-primary text-white">
@@ -169,7 +163,6 @@
       </form>
     </div>
   </div>
-
   <h5>Arresting Authorities (SL)</h5>
   <div style="max-height: 260px; overflow-y: auto;">
     <table class="table table-bordered table-striped">
@@ -194,7 +187,7 @@
         {% endfor %}
       </tbody>
     </table>
-  </div>
+  </div> {% endcomment %}
 
 </div>
 
