--- a/csgdsr/dsr/templates/dsr/user/forms/csr_form.html
+++ b/csgdsr/dsr/templates/dsr/user/forms/csr_form.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="col-md-6">
-        <label for="{{ form.police_station.id_for_label }}" class="form-label">Police Station</label>
+        <label for="{{ form.police_station.id_for_label }}" class="form-label">Marine Police Station</label>
         {{ form.police_station.as_widget }}
         {% for error in form.police_station.errors %}
           <div class="invalid-feedback d-block">{{ error }}</div>
@@ -30,8 +30,9 @@
       <div class="col-md-6">
         <label for="{{ form.date_of_receipt.id_for_label }}" class="form-label">Date of Receipt</label>
         <input type="date" name="{{ form.date_of_receipt.name }}" id="{{ form.date_of_receipt.id_for_label }}"
-               value="{{ form.date_of_receipt.value|default_if_none:'' }}"
-               class="form-control {% if form.date_of_receipt.errors %}is-invalid{% endif %}">
+        value="{{ form.date_of_receipt.value|date:'Y-m-d' }}"
+        class="form-control {% if form.date_of_receipt.errors %}is-invalid{% endif %}">
+
         {% for error in form.date_of_receipt.errors %}
           <div class="invalid-feedback">{{ error }}</div>
         {% endfor %}
@@ -70,13 +71,22 @@
       </div>
     </div>
 
-    <div class="mb-3">
-      <label for="{{ form.nature_of_petition.id_for_label }}" class="form-label">Nature of Petition</label>
-      <textarea name="{{ form.nature_of_petition.name }}" id="{{ form.nature_of_petition.id_for_label }}"
-                class="form-control {% if form.nature_of_petition.errors %}is-invalid{% endif %}" rows="3">{{ form.nature_of_petition.value }}</textarea>
-      {% for error in form.nature_of_petition.errors %}
-        <div class="invalid-feedback">{{ error }}</div>
-      {% endfor %}
+    <div class="row mb-3">
+      <div class="col-md-6">
+        <label for="{{ form.nature_of_petition.id_for_label }}" class="form-label">Nature of Petition</label>
+        <input type="text" name="{{ form.nature_of_petition.name }}" id="{{ form.nature_of_petition.id_for_label }}" value="{{ form.nature_of_petition.value|default_if_none:'' }}" class="form-control {% if form.nature_of_petition.errors %}is-invalid{% endif %}">
+        {% for error in form.nature_of_petition.errors %}
+          <div class="invalid-feedback">{{ error }}</div>
+        {% endfor %}
+      </div>
+      <div class="col-md-6">
+        <label for="{{ form.transfered_to.id_for_label }}" class="form-label">Police Station</label>
+        {{ form.transfered_to.as_widget }}
+        {% for error in form.transfered_to.errors %}
+          <div class="invalid-feedback d-block">{{ error }}</div>
+        {% endfor %}
+      </div>
+
     </div>
 
     <div class="mb-3">
@@ -88,6 +98,7 @@
       {% endfor %}
     </div>
 
+    
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
